# batumi-lunch-site

./: .dockerignore  .env.sample  .gitignore  INTERNAL_NOTES.md  Makefile  OPEN_QUESTIONS.md  QA_CHECKLIST.md  README.md  SUMMARY_OF_IMPLEMENTATION.md  menu.json  roadmap.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  menu.py  orders.py
backend/app/api/v1/schemas/: __init__.py  auth.py  broadcasts.py  menu.py  order_window.py  orders.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: __init__.py  env.py
backend/app/db/migrations/versions/: 20240518_0001_initial_schema.py  20240725_0002_day_offers_table.py  20240725_0003_order_templates.py
backend/app/db/models/: base.py  broadcast.py  enums.py  menu.py  order.py  order_template.py  order_window.py  preset.py  user.py
backend/app/domain/broadcasts/: __init__.py  service.py
backend/app/domain/menu/: __init__.py  service.py
backend/app/domain/order_window/: __init__.py  service.py
backend/app/domain/orders/: __init__.py  errors.py  service.py
backend/app/domain/presets/: __init__.py  service.py
backend/app/domain/users/: __init__.py  errors.py  service.py
backend/app/tools/: __init__.py  generate_openapi.py
backend/tests/: conftest.py
backend/tests/unit/: test_order_service.py  test_user_service.py
deploy/: Dockerfile.api  Dockerfile.web  alembic.ini  docker-compose.yml
frontend/: cypress.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/account/orders/: page.tsx
frontend/app/account/profile/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/broadcast/: page.tsx
frontend/app/admin/menu/: page.tsx
frontend/app/admin/reports/: page.tsx
frontend/app/login/: page.tsx
frontend/app/menu/: page.tsx
frontend/app/planner/: page.tsx
frontend/app/register/: page.tsx
frontend/components/auth/: auth-context.tsx
frontend/components/layout/: app-shell.tsx  social-links.tsx
frontend/components/menu/: menu-carousel.tsx
frontend/components/planner/: planner-screen.tsx
frontend/components/theme/: theme-context.tsx  theme-toggle.tsx
frontend/e2e/: README.md  admin-report.cy.ts  order-flow.cy.ts
frontend/lib/api/: client.ts
frontend/styles/: globals.css
scripts/: migrate_json_to_db.py  seed_menu.py
(+7 files in other folders)
