[tool.poetry]
name = "batumi-lunch-backend"
version = "0.1.0"
description = "Backend service for Batumi Lunch web migration"
authors = ["Batumi Lunch Team <dev@batumi-lunch.local>"]
readme = "../README.md"
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"
psycopg = { extras = ["binary", "pool"], version = "^3.1.18" }
redis = "^5.0.4"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
celery = "^5.4.0"
flower = "^2.0.1"
aioboto3 = "^12.4.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = { version = "^0.27.0", extras = ["http2"] }
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
